--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,40 @@
 body {
   font-family: Google Sans, arial, sans-serif !important;
+  color: white;
+  width: 100%;
+  background: #000;
+  height: 100%;
 }
-
+.sun,
+.moon {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  left: 65%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+}
+.sun {
+  box-sizing: border-box;
+  background: yellow;
+  box-shadow: 10px 10px 10px 10px rgba(255, 255, 190, 0.8);
+}
+.moon {
+  background: black;
+  opacity: 0.8;
+  animation: sun-moon 40s linear infinite;
+}
+@keyframes sun-moon {
+  from {
+    left: 22%;
+  }
+  to {
+    left: 78%;
+  }
+}
 h1 {
-  color: #878787;
+  color: white;
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
@@ -19,7 +50,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: rgb(135, 135, 135);
+  color: white;
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
@@ -36,7 +67,7 @@ li:first-letter {
 
 .weather-app {
   padding: 20px;
-  border: 1px solid #dadde1;
+  border: 10px solid #dadde1;
   border-radius: 10px;
   margin: 30px auto;
   max-width: 600px;
@@ -53,34 +84,38 @@ li:first-letter {
 }
 
 .weather-temperature strong {
-  color: rgb(33, 33, 33);
+  color: white;
   font-size: 64px;
   line-height: 1;
   font-weight: 400;
 }
 
 .weather-temperature .units {
+  color: white;
   position: relative;
   font-size: 16px;
   top: -34px;
 }
 
 .weather-temperature .active {
-  color: rgb(33, 33, 33);
+  color: white;
   cursor: default;
 }
 
 .weather-forecast {
+  color: white;
   margin-top: 20px;
   text-align: center;
 }
 
 .weather-forecast-date {
+  color: white;
   font-size: 16px;
   opacity: 0.5;
 }
 
 .weather-forecast-temperature-min {
+  color: whitesmoke;
   opacity: 0.5;
 }
 
